--- a/NEURODASH/views/entrenamiento/entrenamiento.html
+++ b/NEURODASH/views/entrenamiento/entrenamiento.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEURODASH</title>
-    <link rel="icon" href="../../assets/img/iconos-principales/rayo.icon">
-    <link rel="stylesheet" href="../../assets/css/main.css">
-    <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
-
-  </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NEURODASH</title>
+  <link rel="icon" href="../../assets/img/iconos-principales/rayo.icon">
+  <link rel="stylesheet" href="../../assets/css/main.css">
+  <link rel="stylesheet" href="../../lib/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="../../lib/fontawesome/css/all.css">
+</head>
 <body class="backgound-uno" style="overflow: hidden;">
   <div class="container-fluid estilo">
     <div class="row">
@@ -29,6 +28,7 @@
         <img src="../../assets/img/iconos-principales/dash.png" alt="logo" class="logito-entrenamiento">
       </div>
     </div>
+    <!-- opciones de nivel -->
     <div class="row">
       <div class="col-12 d-flex justify-content-center">
         <div class="card Difi max-w-100 p-2" style="background-color: #8080ff7c; border-radius: 15px; width:600px;">
